--- a/experience/index.html
+++ b/experience/index.html
@@ -15,7 +15,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Niruta</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -169,7 +169,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Niruta's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -186,20 +186,20 @@
       <div class="box">
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>Nirutasable21@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/Niruta-sable" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/Niruta-sable" class="fab fa-github" target="_blank"></a>
+            <a href="mailto:Nirutasable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://twitter.com/Niruta_sable" class="fab fa-twitter" target="_blank"></a>
             <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Niruta Poudel</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/Niruta-sable"> Niruta Poudel</a></h1>
 
 </section>
 <!-- footer section ends -->
