--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="content">
         <h3>I'm Niruta</h3>
-        <span class="tag">Flutter Developer</span>
+        <span class="tag">Flutter Developer | Developer</span>
         
         <p>I am a Mobile Application developer based in Pokhara, Nepal. 
           I am a Softwore Engineering Graduate from Pokhara University.
